# stembler

./: .gitignore  CHANGELOG  CLAUDE.md  CODE_REVIEW.md  PACKAGING.md  PROJECT_OVERVIEW.md  README.md  SETUP.md  TODO.md  pyproject.toml  setup.py
.specify/memory/: constitution.md
packaging/: ICON-README.md  PACKAGING.md  generate_icons.py
packaging/macos/: build.sh  build_dmg.sh  create_app_bundle.sh  icon.icns  launcher.py  runtime_hook.py  setup_py2app.py  stembler.spec
packaging/windows/: build.bat  build_msi.py  launcher.py  stembler.spec
specs/: UI-REDESIGN-PLAN.md
specs/001-desktop-gui/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-desktop-gui/checklists/: requirements.md
specs/001-desktop-gui/contracts/: gui-api.md
src/music_stem_separator/: __init__.py  cli.py  gui_main.py  input_processor.py  output_manager.py  separator.py  spotify_handler.py  stem_processor.py  url_downloader.py
src/music_stem_separator/gui/: main_window.py
src/music_stem_separator/gui/controllers/: processing_controller.py  settings_controller.py
src/music_stem_separator/gui/models/: __init__.py  audio_input.py  output_bundle.py  processing_job.py  user_settings.py
src/music_stem_separator/gui/utils/: credential_utils.py  error_handler.py  (+5 more)
src/music_stem_separator/shared/: process_track.py
tests/: test_cli.py  test_input_processor.py  test_output_manager.py  test_separator.py  test_shared_process_track.py  test_spotify_handler.py  test_stem_processor.py
tests/test_gui/: conftest.py  test_file_input.py  test_settings_panel.py
(+6 files in other folders)
