[project]
name = "music-stem-separator"
version = "0.1.0"
description = "AI-powered music stem separation tool that extracts drums, bass, vocals, and other instruments from audio files"
readme = "README.md"
authors = [
    { name = "Craig Penfold", email = "craig.penfold@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "demucs>=4.0.0",
    "librosa>=0.10.0",
    "spotdl>=4.0.0",
    "click>=8.0.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "soundfile>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
stem-separator = "music_stem_separator.cli:main"

[build-system]
requires = ["uv_build>=0.8.5,<0.9.0"]
build-backend = "uv_build"
